--- a/user-request-sb/src/main/resources/application.properties
+++ b/user-request-sb/src/main/resources/application.properties
@@ -1,3 +1,13 @@
+spring.datasource.jdbcUrl=jdbc:mysql://localhost:3307/spring_batch
+spring.datasource.username=root
+spring.datasource.password=102030
+
+app.datasource.jdbcUrl=jdbc:mysql://localhost:3307/app
+app.datasource.username=root
+app.datasource.password=102030
+
+spring.batch.jdbc.initialize-schema=always
+
 chunkSize = 10
 pageSize = 10
 
